# MSFS-DIS-Gateway-

./: .gitignore  .gitmodules  CMakeLists.txt  DISBridge.cpp  README.md
src/: CMakeLists.txt  main.cpp  main.h
src/bridge-core/: Base64Encoder.h  DISBridge.cpp  FlightData.h  SimConnectBridge.h  UdpClient.h  WebServer.h  base64Encoder.cpp  decode.cpp  encode.cpp  flightData.cpp  main.cpp  mappingConfig.cpp  mappingConfig.h  simConnectBridge.cpp  udpClient.cpp  webServer.cpp
src/rest-api/: main.cpp
tests/pdu-replay/: TestBridge.cpp
